--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "firebase": "^4.12.1",
+    "lodash": "^4.17.5",
     "react": "16.3.1",
     "react-native": "0.55.3",
+    "react-native-communications": "^2.2.1",
     "react-native-router-flux": "^3.43.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
